style: 💄 updated texts

--- a/src/pages/kontakt-oss.astro
+++ b/src/pages/kontakt-oss.astro
@@ -11,13 +11,7 @@ import Button from "@components/Button.astro";
   <Header />
   <main>
     <form class="form-grid">
-      <TextArea
-        id="msg"
-        label="Melding *"
-        placeholder="Hei, jeg trenger en bla bla..."
-        type="text"
-        required
-      />
+      <TextArea id="msg" label="Melding *" type="text" required />
       <div class="inputs-wrapper">
         <TextInput
           id="email"
