--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Card from "@components/Card.astro";
       <Card
         href="/kontakt-oss"
         title="Kontakt oss 📩"
-        body="Come say hi to our amazing Discord community. ❤️"
+        body="Hvordan kan vi hjelpe dere? Kontakt oss for en uforpliktende samtale."
       />
     </ul>
   </main>
