fix: 🐛 fix send email, and cleanup scripts

--- a/src/pages/om-oss.astro
+++ b/src/pages/om-oss.astro
@@ -5,7 +5,10 @@ import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 ---
 
-<Layout title="OTG Solutions AS | Om oss">
+<Layout
+  title="OTG Solutions AS | Om oss"
+  description="Vårt firma spesialiserer seg på rådgivning, teknologitjenester og digital transformasjon."
+>
   <Header />
   <main>
     <InformationBox>
