--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,10 @@
 ---
 export interface Props {
   title: string;
+  description?: string;
+  norobots?: boolean;
 }
-const { title } = Astro.props;
+const { title, norobots, description } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -12,6 +14,8 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/in_transit.svg" />
     <meta name="generator" content={Astro.generator} />
+    {description && <meta name="description" content={description} />}
+    {norobots && <meta name="robots" content="noindex" />}
     <title>{title}</title>
   </head>
   <body class="layout-grid">
