--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Card from "@components/Card.astro";
 
 <Layout
   title="OTG Solutions AS | Utvikling av IT systemer | Konsulenttjenester"
+  description="Utvikling av IT systemer. Konsulenttjenester"
 >
   <Header />
   <main>
