fix: 🐛 fix button

--- a/src/pages/kontakt-oss.astro
+++ b/src/pages/kontakt-oss.astro
@@ -25,9 +25,9 @@ import Button from "@components/Button.astro";
         <TextInput id="phone" label="Ditt mobilnummer *" type="tel" required />
         <TextInput id="name" label="Navn" />
       </div>
-      <submit-button-wrapper>
+      <div class="submit-button-wrapper">
         <Button>Send</Button>
-      </submit-button-wrapper>
+      </div>
     </form>
   </main>
   <Footer />
@@ -49,7 +49,7 @@ import Button from "@components/Button.astro";
     .form-grid {
       grid-template-columns: 1fr 1fr;
     }
-    submit-button-wrapper {
+    .submit-button-wrapper {
       grid-column: span 2;
       text-align: right;
     }
