--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -2,9 +2,7 @@
 ---
 
 <button class="link-card" type="submit">
-  <p class="button-p">
-    <slot />
-  </p>
+  <slot />
 </button>
 
 <style>
@@ -17,13 +15,14 @@
     background-image: var(--accent-gradient);
     background-size: 400%;
     background-position: 100%;
-    transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+    transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1),
+      color 0.6s ease-in-out;
+    font-weight: 600;
+    font-size: 1rem;
   }
 
   button:is(:hover, :focus-within) {
     background-position: 25%;
-  }
-  button:is(:hover, :focus-within) p {
     color: white;
   }
 </style>
