style: 💄 tweak p styling

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,6 +50,8 @@ const { title, norobots, description } = Astro.props;
 
   p {
     font-size: 1.1rem;
+    margin-bottom: 1.5rem;
+    line-height: 2rem;
   }
   a {
     line-height: 1.6rem;
