--- a/src/pages/om-oss.astro
+++ b/src/pages/om-oss.astro
@@ -12,13 +12,18 @@ import Footer from "@components/Footer.astro";
   <Header />
   <main>
     <InformationBox>
-      Vårt firma spesialiserer seg på rådgivning, teknologitjenester og digital
-      transformasjon. Vi hjelper bedrifter med å utnytte teknologiens kraft for
-      å effektivisere driften, øke effektiviteten og ligge i forkant av
-      konkurrentene. <br />Enten du trenger hjelp med strategi, implementering
-      eller løpende støtte, har vi ekspertisen og erfaringen til å hjelpe deg
-      med å nå dine mål. La oss hjelpe deg å drive virksomheten din fremover med
-      vårt omfattende utvalg av tjenester.
+      <p>
+        Vårt firma spesialiserer seg på rådgivning, teknologitjenester og
+        digital transformasjon. Vi hjelper bedrifter med å utnytte teknologiens
+        kraft for å effektivisere driften, øke effektiviteten og ligge i forkant
+        av konkurrentene.
+      </p>
+      <p>
+        Enten du trenger hjelp med strategi, implementering eller løpende
+        støtte, har vi ekspertisen og erfaringen til å hjelpe deg med å nå dine
+        mål. La oss hjelpe deg å drive virksomheten din fremover med vårt
+        omfattende utvalg av tjenester.
+      </p>
     </InformationBox>
   </main>
   <Footer />
