--- a/src/components/InformationBox.astro
+++ b/src/components/InformationBox.astro
@@ -4,17 +4,15 @@ export interface Props {
 }
 ---
 
-<section>
-  <p class="information"><slot /></p>
+<section class="information">
+  <slot />
 </section>
 
 <style>
   section {
     margin-bottom: 2rem;
   }
-  p {
-    color: var(--text-primary);
-  }
+
   .information {
     line-height: 1.6rem;
     border: var(--border-primary);
