style: 💄 tweak texts and email styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Card from "@components/Card.astro";
       <Card
         href="/om-oss"
         title="Om oss 🏢"
-        body="Vårt firma spesialiserer seg på rådgivning, teknologitjenester og digital transformasjon."
+        body="Spesialister på teknologitjenester og digital transformasjon."
       />
       <!-- <Card
         href="/prosjekter"
@@ -30,7 +30,7 @@ import Card from "@components/Card.astro";
       <Card
         href="/kontakt-oss"
         title="Kontakt oss 📩"
-        body="Hvordan kan vi hjelpe dere? Kontakt oss for en uforpliktende samtale."
+        body="Hvordan kan vi hjelpe dere?"
       />
     </ul>
   </main>
