--- a/src/pages/om-oss.astro
+++ b/src/pages/om-oss.astro
@@ -13,10 +13,9 @@ import Footer from "@components/Footer.astro";
   <main>
     <InformationBox>
       <p>
-        Vårt firma spesialiserer seg på rådgivning, teknologitjenester og
-        digital transformasjon. Vi hjelper bedrifter med å utnytte teknologiens
-        kraft for å effektivisere driften, øke effektiviteten og ligge i forkant
-        av konkurrentene.
+        Vi spesialiserer oss på teknologitjenester og digital transformasjon. Vi
+        hjelper bedrifter med å utnytte teknologiens kraft for å effektivisere
+        driften, øke inntektene og ligge i forkant av konkurrentene.
       </p>
       <p>
         Enten du trenger hjelp med strategi, implementering eller løpende
