--- a/src/pages/om-oss.astro
+++ b/src/pages/om-oss.astro
@@ -7,21 +7,23 @@ import Footer from "@components/Footer.astro";
 
 <Layout
   title="OTG Solutions AS | Om oss"
-  description="Vårt firma spesialiserer seg på rådgivning, teknologitjenester og digital transformasjon."
+  description="Vi spesialiserer oss på rådgivning, teknologitjenester og digital transformasjon."
 >
   <Header />
   <main>
     <InformationBox>
       <p>
-        Vi spesialiserer oss på teknologitjenester og digital transformasjon. Vi
-        hjelper bedrifter med å utnytte teknologiens kraft for å effektivisere
-        driften, øke inntektene og ligge i forkant av konkurrentene.
+        Vi er eksperter innen teknologitjenester og digital transformasjon. Vårt
+        mål er å hjelpe bedrifter med å anvende teknologiens fulle potensial for
+        å strømlinjeforme driften, maksimere inntektene og få et forsprang på
+        konkurransen.
       </p>
       <p>
-        Enten du trenger hjelp med strategi, implementering eller løpende
-        støtte, har vi ekspertisen og erfaringen til å hjelpe deg med å nå dine
-        mål. La oss hjelpe deg å drive virksomheten din fremover med vårt
-        omfattende utvalg av tjenester.
+        Uavhengig av om du behøver bistand innen strategiutforming,
+        teknologiimplementering eller løpende støtte, har vi den nødvendige
+        kompetansen og erfaringen for å hjelpe deg med å oppnå dine mål. La oss
+        være drivkraften som beveger virksomheten din fremover ved hjelp av vårt
+        brede spekter av tjenester.
       </p>
     </InformationBox>
   </main>
