--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,84 +1,22 @@
 ---
-export interface Props {
-  title: string;
-  description?: string;
-  norobots?: boolean;
-}
-const { title, norobots, description } = Astro.props;
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 ---
 
-<!DOCTYPE html>
-<html lang="no">
+<!doctype html>
+<html lang="no" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/in_transit.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    {description && <meta name="description" content={description} />}
-    {norobots && <meta name="robots" content="noindex" />}
-    <title>{title}</title>
+    <title>OTG Solutions AS | Utvikling av IT systemer | Konsulenttjenester</title>
   </head>
-  <body class="layout-grid">
-    <slot />
+  <body class="min-h-screen flex flex-col">
+    <Header />
+    <main class="flex-grow">
+      <slot />
+    </main>
+    <Footer />
   </body>
 </html>
-<style is:global>
-  :root {
-    --accent: 124, 58, 237;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      #da62c4 30%,
-      white 60%
-    );
-    --text-primary: #444;
-    --border-radius: 0.5rem;
-    --border-primary: 1px solid rgba(var(--accent), 25%);
-  }
-
-  html {
-    font-family: system-ui, sans-serif;
-    background-color: #f6f6f6;
-    color: var(--text-primary);
-  }
-
-  h1,
-  h2,
-  p {
-    margin: 0;
-  }
-
-  p {
-    font-size: 1.1rem;
-    margin-bottom: 1.5rem;
-    line-height: 2rem;
-  }
-  a {
-    line-height: 1.6rem;
-    color: var(--text-primary);
-  }
-  header {
-    padding-top: 2rem;
-  }
-  footer {
-    padding-bottom: 2rem;
-  }
-
-  .text-gradient {
-    background-image: var(--accent-gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 400%;
-    background-position: 0%;
-  }
-
-  .layout-grid {
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    gap: 1.5rem;
-    margin: auto;
-    padding: 0 1.5rem;
-    max-width: 70ch;
-    min-height: 100vh;
-  }
-</style>
