--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,26 +8,28 @@ interface Props {
 const { title, icon, class: className } = Astro.props;
 ---
 
-<div class:list={["bg-white rounded-lg shadow-lg overflow-hidden", className]}>
+<div class:list={['bg-white rounded-lg shadow-lg overflow-hidden', className]}>
   <div class="px-6 py-8">
-    {(icon || title) && (
-      <div class="flex items-center">
-        {icon && (
-          <div class="flex-shrink-0">
-            <div class="flex items-center justify-center h-12 w-12 rounded-md bg-blue-600 text-white">
-              <Fragment set:html={icon} />
+    {
+      (icon || title) && (
+        <div class="flex items-center">
+          {icon && (
+            <div class="flex-shrink-0">
+              <div class="flex items-center justify-center h-12 w-12 rounded-md bg-blue-600 text-white">
+                <Fragment set:html={icon} />
+              </div>
             </div>
-          </div>
-        )}
-        {title && (
-          <div class="ml-4">
-            <h3 class="text-lg font-medium text-gray-900">{title}</h3>
-          </div>
-        )}
-      </div>
-    )}
+          )}
+          {title && (
+            <div class="ml-4">
+              <h3 class="text-lg font-medium text-gray-900">{title}</h3>
+            </div>
+          )}
+        </div>
+      )
+    }
     <div class="mt-4">
       <slot />
     </div>
   </div>
-</div> 
+</div>
