--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,16 +1,24 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import '@/styles/global.css';
+import Header from '@/components/Header.astro';
+import Footer from '@/components/Footer.astro';
+
+interface Props {
+  description: string;
+}
+
+const { description } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="no" class="scroll-smooth">
+<html lang="no">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>OTG Solutions AS | Utvikling av IT systemer | Konsulenttjenester</title>
+    {description && <meta name="description" content={description} />}
   </head>
   <body class="min-h-screen flex flex-col">
     <Header />
