--- a/src/pages/om-oss.astro
+++ b/src/pages/om-oss.astro
@@ -3,8 +3,6 @@ import Layout from '@/layouts/Layout.astro';
 import Container from '@/components/Container.astro';
 ---
 
-<Layout
-  description="OTG Solutions AS er en konsulentvirksomhet som leverer IT-løsninger og konsulenttjenester."
->
+<Layout description="Om oss">
   <Container />
 </Layout>
