updated la nding page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,10 +16,7 @@ import Container from '@/components/Container.astro';
       </div>
       <div>
         <p class="text-lg font-semibold mb-4">Følg Oss</p>
-        <Link
-          href="https://www.linkedin.com/company/otg-solutions-as/"
-          ariaLabel="Lenke til OTG Solutions AS på LinkedIn">LinkedIn</Link
-        >
+        <Link href="https://www.linkedin.com/company/otg-solutions-as/" ariaLabel="Lenke til OTG Solutions AS på LinkedIn">LinkedIn</Link>
       </div>
     </div>
     <div class="mt-8 py-8 text-center">
