--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { description } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>OTG Solutions AS | Utvikling av IT systemer | Konsulenttjenester</title>
-    {description && <meta name="description" content={description} />}
+    <meta name="description" content={description} />
   </head>
   <body class="min-h-screen flex flex-col">
     <Header />
