--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -1,4 +1,6 @@
 ---
+import { cn } from '@/lib/utils';
+
 interface Props {
   class?: string;
 }
@@ -6,6 +8,6 @@ interface Props {
 const { class: className } = Astro.props;
 ---
 
-<div class:list={['max-w-7xl mx-auto px-4 py-2 sm:px-6 sm:py-4 lg:px-8 lg:py-4', className]}>
+<div class={cn('max-w-7xl mx-auto p-4 sm:px-6 sm:py-4 lg:px-8 lg:py-4', className)}>
   <slot />
 </div>
