--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -1,8 +1,22 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 import Container from '@/components/Container.astro';
+import { HoneypotEmail } from '@/components/honeypot-email';
 ---
 
-<Layout description="Kontakt oss">
-  <Container />
+<Layout description="Kontakt OTG Solutions - La oss snakke om ditt neste prosjekt">
+  <Container>
+    <div class="py-24 max-w-3xl mx-auto">
+      <div class="mt-16 space-y-12">
+        <div class="text-center">
+          <h2 class="text-2xl font-semibold mb-4">Ta kontakt</h2>
+          <div class="space-y-2">
+            <p>
+              <HoneypotEmail email="post@otg-solutions.no" className="text-primary" client:load />
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </Container>
 </Layout>
