added copyright icon footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,9 @@ import Container from '@/components/Container.astro';
       </div>
     </div>
     <div class="mt-8 py-8 text-center">
-      <p class="text-gray-600">OTG Solutions AS. Alle rettigheter reservert.</p>
+      <p class="text-gray-600">
+        © {new Date().getFullYear()} OTG Solutions AS
+      </p>
     </div>
   </Container>
 </footer>
